--- a/microservicio-equipo/src/main/resources/application.properties
+++ b/microservicio-equipo/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=8085
+
+spring.security.oauth2.resourceserver.jwt.issueruri=http://localhost:8080/realms/biblioteca
+spring.security.oauth2.resourceserver.jwt.jwk-seturi=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openidconnect/certs
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.realm=gimnasio
+keycloak.resource=equipo-service
+keycloak.public-client=false
+keycloak.credentials.secret=oI6HgUr3b97xhn9aL4NXm40s2JVRiGCF
+logging.level.org.springframework.security=DEBUG
