--- a/microservicio-entrenador/src/main/resources/application.properties
+++ b/microservicio-entrenador/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=8084
 
-spring.security.oauth2.resourceserver.jwt.issueruri=http://localhost:8080/realms/biblioteca
+spring.security.oauth2.resourceserver.jwt.issueruri=http://localhost:8080/realms/gimnasio
 spring.security.oauth2.resourceserver.jwt.jwk-seturi=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openidconnect/certs
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.realm=gimnasio
 keycloak.resource=entrenador-service
 keycloak.public-client=false
-keycloak.credentials.secret=oI6HgUr3b97xhn9aL4NXm40s2JVRiGCF
+keycloak.credentials.secret=zCWHMYMtWUujZ3B4dEpmC9qpfsvN92jS
 logging.level.org.springframework.security=DEBUG
