--- a/microservicio-entrenador/src/main/resources/application.properties
+++ b/microservicio-entrenador/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=8084
 
-spring.security.oauth2.resourceserver.jwt.issueruri=http://localhost:8080/realms/gimnasio
-spring.security.oauth2.resourceserver.jwt.jwk-seturi=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openidconnect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/gimnasio
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openidconnect/certs
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.realm=gimnasio
 keycloak.resource=entrenador-service
