--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -17,3 +17,7 @@ keycloak.resource=clase-service
 keycloak.public-client=false
 keycloak.credentials.secret=oOZ5lpKPMvm2hXSU9G5Z9Q8rBH1dE39a
 logging.level.org.springframework.security=DEBUG
+
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
