--- a/microservicio-miembro/src/main/resources/application.properties
+++ b/microservicio-miembro/src/main/resources/application.properties
@@ -18,3 +18,8 @@ keycloak.credentials.secret=dbddXr1nGg07z7KMvQ3ektWU4Ck4hWOl
 
 
 logging.level.org.springframework.security=DEBUG
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
