--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -21,3 +21,8 @@ logging.level.org.springframework.security=DEBUG
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
