--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.kafka.consumer.auto-commit-interval=1000
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
