--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -26,13 +26,13 @@ spring.kafka.consumer.auto-commit-interval=1000
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-<<<<<<< HEAD
 spring.kafka.consumer.group-id=Local-Kafka
 spring.kafka.consumer.auto-offset-reset=earliest
-=======
+spring.kafka.admin.auto-create=true
+spring.kafka.streams.num-stream-threads=1
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
->>>>>>> a0bf659d44df3cefe76a5d4424ee877206d70bc1
+
