--- a/microservicio-clase2/pom.xml
+++ b/microservicio-clase2/pom.xml
@@ -38,6 +38,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+         
+         
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>notification-dto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
