--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -21,18 +21,18 @@ logging.level.org.springframework.security=DEBUG
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.auto-commit-interval=1000
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.group-id=Local-Kafka
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.admin.auto-create=true
-spring.kafka.streams.num-stream-threads=1
+spring.kafka.streams.application-id=entrenador-app
+spring.kafka.streams.state-dir=/tmp/kafka-streams
+
+spring.main.allow-bean-definition-overriding=true
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+log.retention.hours=168   # Retener logs por 7 días
+log.retention.bytes=1073741824  # 1GB por log segment
+log.segment.bytes=536870912  # 512MB por segmento
+log.cleanup.policy=delete  # Eliminar logs viejos automáticamente
 
