--- a/microservicio-clase2/src/main/resources/application.properties
+++ b/microservicio-clase2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=clase
+spring.application.name=clase-service
 spring.datasource.url=jdbc:h2:mem:circulaciondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -36,3 +36,10 @@ log.retention.bytes=1073741824  # 1GB por log segment
 log.segment.bytes=536870912  # 512MB por segmento
 log.cleanup.policy=delete  # Eliminar logs viejos automáticamente
 
+# Eureka Client Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Opcional: si quieres ver en logs que el registro fue exitoso
+logging.level.com.netflix.discovery=DEBUG
