--- a/microservicio-entrenador/src/main/resources/application.properties
+++ b/microservicio-entrenador/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=entrenador
+spring.application.name=entrenador-service
 spring.datasource.url=jdbc:h2:mem:circulaciondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -16,3 +16,11 @@ keycloak.resource=entrenador-service
 keycloak.public-client=false
 keycloak.credentials.secret=zCWHMYMtWUujZ3B4dEpmC9qpfsvN92jS
 logging.level.org.springframework.security=DEBUG
+
+# Eureka Client Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Opcional: si quieres ver en logs que el registro fue exitoso
+logging.level.com.netflix.discovery=DEBUG
