--- a/microservicio-equipo/src/main/resources/application.properties
+++ b/microservicio-equipo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=equipo
+spring.application.name=equipo-service
 spring.datasource.url=jdbc:h2:mem:circulaciondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -18,3 +18,10 @@ keycloak.credentials.secret=2Vj3y5xjtdPoy7z6ZLRmricChSUFuHEK
 
 logging.level.org.springframework.security=DEBUG
 
+# Eureka Client Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Opcional: si quieres ver en logs que el registro fue exitoso
+logging.level.com.netflix.discovery=DEBUG
