--- a/microservicio-miembro/src/main/resources/application.properties
+++ b/microservicio-miembro/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=miembro
+spring.application.name=miembro-service
 spring.datasource.url=jdbc:h2:mem:circulaciondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -23,3 +23,11 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# Eureka Client Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Opcional: si quieres ver en logs que el registro fue exitoso
+logging.level.com.netflix.discovery=DEBUG
