--- a/microservicio-notificacion2/src/main/resources/application.properties
+++ b/microservicio-notificacion2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=biblioteca
+spring.application.name=notificacion-service
 spring.datasource.url=jdbc:h2:mem:notificaciondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -32,3 +32,11 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Eureka Client Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Opcional: si quieres ver en logs que el registro fue exitoso
+logging.level.com.netflix.discovery=DEBUG
